Prevent Mini-Cart template part preview in Site Editor being too high (https://github.com/woocommerce/woocommerce-blocks/pull/10204)
* Prevent Mini-Cart template part preview in Site Editor being too high

* Remove Mini-Cart Contents styles related to Style Book

--- a/plugins/woocommerce-blocks/assets/js/blocks/mini-cart/mini-cart-contents/editor.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/mini-cart/mini-cart-contents/editor.scss
@@ -88,8 +88,12 @@
 	}
 }
 
-.editor-styles-wrapper .wp-block-woocommerce-mini-cart-contents,
-.editor-styles-wrapper .wp-block-woocommerce-filled-mini-cart-contents-block {
-	height: auto;
-	min-height: 500px;
+/* Site Editor preview */
+.block-editor-block-preview__content-iframe .editor-styles-wrapper {
+	.wp-block-woocommerce-mini-cart-contents,
+	.wp-block-woocommerce-filled-mini-cart-contents-block,
+	.wp-block-woocommerce-empty-mini-cart-contents-block {
+		height: 800px;
+		min-height: none;
+	}
 }
